*fix dashboard n *add dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -4,20 +4,44 @@
   box-sizing: border-box;
 }
 
-header {
+.body {
+  display: grid;
+
+}
+.header {
+  background-color: white;
+  padding: 10px 20px;
+}
+.header-dark {
   background-color: #333;
   padding: 10px 20px;
 }
 
-.navbar {
+.logle{
+  display: flex;
+  gap: 20px;
+}
+
+.navbar  {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 60px;
+  color: #000000;
+}
+.navbar-dark  {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  color: #ffffff;
 }
 
 .logo {
-  color: white;
+  font-size: 24px;
+  font-weight: bold;
+}
+.logo-dark {
   font-size: 24px;
   font-weight: bold;
 }
@@ -32,7 +56,11 @@ header {
 }
 
 .nav-links li a {
-  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  color: #808080;
+}
+.nav-links-dark li a {
   text-decoration: none;
   font-size: 18px;
 }
@@ -80,15 +108,69 @@ header {
   }
   
   .close {
-    color: #ffffff;
     margin: 30px;
     font-size: large;
     display: block;
   }
 }
 
-.me {
+.toggle-switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 24px;
+  margin-top: 8px;
+}
+
+.toggle-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  transition: 0.4s;
+  border-radius: 24px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 4px;
+  bottom: 3px;
   background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #ccc;
+}
+
+input:checked + .slider:before {
+  transform: translateX(25px); /* Pastikan nilai ini sesuai dengan ukuran switch */
+}
+
+.bg-portofolio {
+  height: max-content;
+  background-color: white;
+  color: #000000;
+  padding: 10px;
+  height: 10rem;
+}
+.bg-portofolio-dark {
+  height: max-content;
+  background-color: #434343;
+  color: #ffffff;
   padding: 10px;
   height: 10rem;
 }
@@ -96,7 +178,38 @@ header {
 .profile {
   width: 100%;
   height: max-content;
-  background-color: white;
+  background-color: #ffffff;
+  border: 2px;
+  border-color: black;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 8px;
+}
+.profile-dark {
+  width: 100%;
+  height: max-content;
+  background-color: #333;
+  border: 2px;
+  border-color: black;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 8px;
+}
+
+.aboutme {
+  width: 100%;
+  height: max-content;
+  background-color: #ffffff;
+  border: 2px;
+  border-color: black;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 8px;
+}
+.aboutme-dark {
+  width: 100%;
+  height: max-content;
+  background-color: #333;
   border: 2px;
   border-color: black;
   border-style: solid;
